# pctl_idual

./: .gitignore  IDUAL_PCTL.ipynb  README.md  Toyota_PCTL.ipynb  __init__.py  dp_solvers (1).py  dp_solvers.py  gridworld (3).py  gridworld.py  idual_solvers.py  lp_solvers (4).py  lp_solvers.py  pctl_solvers.py  pyproject.toml  requirements.txt  untitled35 (4).py
configs/: dp_20x20.yaml  dp_4x4.yaml  dp_custom.yaml  gurobi_pctl_20x20.yaml  gurobi_pctl_4x4.yaml  idual_20x20.yaml  idual_4x4.yaml  pctl_20x20.yaml  pctl_4x4.yaml  smoke_test.yaml
mosek/: mosek.lic
scripts/: run_experiment.py
src/pctl_idual/: dp_solvers.py  gurobipy_lp_solver.py  gurobipy_pctl_solvers (1).py  gurobipy_pctl_solvers.py  helpers.py  idual_solvers.py  lp_solvers.py  pctl_solvers.py
src/pctl_idual.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
